--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icons/192.jpeg">
   <meta name="theme-color" content="#ffffff">
-  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <style>
     body {
@@ -31,25 +30,28 @@
 
     input, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 8px 0;
       font-size: 16px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
 
     button {
       width: 100%;
       padding: 12px;
+      margin-top: 10px;
       background: #007bff;
       color: white;
       border: none;
       border-radius: 8px;
       font-size: 16px;
-      margin-top: 10px;
     }
 
     .result {
       margin-top: 15px;
       font-weight: bold;
+      font-size: 18px;
     }
   </style>
 </head>
@@ -58,29 +60,37 @@
   <h1>🏠 Min Pris</h1>
 
   <div class="card">
-    <input id="desc" placeholder="Arbeidsbeskrivelse">
 
-    <input id="price" type="number" placeholder="Pris per stk">
-    <input id="qty" type="number" placeholder="Antall">
+    <input id="arbeid" placeholder="Arbeidsbeskrivelse">
+
+    <input id="timepris" type="number" placeholder="Timepris (kr)">
+
+    <input id="timer" type="number" placeholder="Antall timer">
 
     <button onclick="beregn()">Beregn</button>
     <button onclick="lagPDF()">Last ned PDF</button>
 
     <div class="result" id="resultat"></div>
+
   </div>
 
 <script>
 function beregn() {
-  const pris = Number(document.getElementById("price").value);
-  const antall = Number(document.getElementById("qty").value);
-  const sum = pris * antall;
+  const pris = Number(document.getElementById("timepris").value);
+  const timer = Number(document.getElementById("timer").value);
 
+  if (!pris || !timer) {
+    alert("Fyll inn både timepris og timer");
+    return;
+  }
+
+  const sum = pris * timer;
   document.getElementById("resultat").innerText =
-    "Sum: " + sum.toFixed(2) + " kr";
+    "Totalt: " + sum.toFixed(2) + " kr";
 }
 
 function lagPDF() {
-  alert("PDF-funksjon kommer – kan kobles på neste steg 👍");
+  alert("PDF-funksjon kommer i neste steg 👍");
 }
 </script>
 
