--- a/index.html
+++ b/index.html
@@ -1,96 +1,123 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Min Pris</title>
 
-  <title>Min Pris</title>
+<link rel="apple-touch-icon" href="icons/192.jpeg">
+<meta name="theme-color" content="#ffffff">
 
-  <!-- PWA -->
-  <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="icons/192.jpeg">
-  <meta name="theme-color" content="#ffffff">
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #f4f4f4;
+  padding: 20px;
+  text-align: center;
+}
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      padding: 20px;
-      text-align: center;
-    }
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  max-width: 420px;
+  margin: auto;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
 
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 420px;
-      margin: auto;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
+input, textarea {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
 
-    input, textarea {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
+button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  background: #007bff;
+  color: white;
+}
 
-    button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-
-    .result {
-      margin-top: 15px;
-      font-weight: bold;
-      font-size: 18px;
-    }
-  </style>
+.result {
+  margin-top: 15px;
+  text-align: left;
+  font-size: 15px;
+}
+</style>
 </head>
+
 <body>
 
-  <h1>🏠 Min Pris</h1>
+<h1>🏠 Min Pris</h1>
 
-  <div class="card">
+<div class="card">
 
-    <input id="arbeid" placeholder="Arbeidsbeskrivelse">
+<textarea id="beskrivelse" placeholder="Arbeidsbeskrivelse (f.eks: Rengjøring, riving, avfall 1000kr)"></textarea>
 
-    <input id="timepris" type="number" placeholder="Timepris (kr)">
+<input id="timepris" type="number" placeholder="Timepris (kr)">
 
-    <input id="timer" type="number" placeholder="Antall timer">
+<button onclick="beregn()">Beregn</button>
+<button onclick="lagPDF()">Last ned PDF</button>
 
-    <button onclick="beregn()">Beregn</button>
-    <button onclick="lagPDF()">Last ned PDF</button>
+<div class="result" id="resultat"></div>
 
-    <div class="result" id="resultat"></div>
-
-  </div>
+</div>
 
 <script>
 function beregn() {
-  const pris = Number(document.getElementById("timepris").value);
-  const timer = Number(document.getElementById("timer").value);
+  const tekst = document.getElementById("beskrivelse").value.toLowerCase();
+  const timepris = Number(document.getElementById("timepris").value);
 
-  if (!pris || !timer) {
-    alert("Fyll inn både timepris og timer");
+  if (!tekst || !timepris) {
+    alert("Fyll inn arbeidsbeskrivelse og timepris");
     return;
   }
 
-  const sum = pris * timer;
-  document.getElementById("resultat").innerText =
-    "Totalt: " + sum.toFixed(2) + " kr";
+  let timer = 0;
+  let ekstra = 0;
+  let detaljer = [];
+
+  // AUTOMATISK TOLKNING
+  if (tekst.includes("rengjør")) {
+    timer += 3;
+    detaljer.push("Rengjøring: 3 t");
+  }
+
+  if (tekst.includes("riving")) {
+    timer += 4;
+    detaljer.push("Riving: 4 t");
+  }
+
+  // Finn ekstra kostnader (eks: avfall 1000kr)
+  const match = tekst.match(/(\d+)\s*kr/);
+  if (match) {
+    ekstra = parseInt(match[1]);
+    detaljer.push("Ekstra kostnad: " + ekstra + " kr");
+  }
+
+  const arbeid = timer * timepris;
+  const total = arbeid + ekstra;
+
+  document.getElementById("resultat").innerHTML = `
+    <strong>Spesifikasjon:</strong><br>
+    ${detaljer.join("<br>")}<br><br>
+    Timer: ${timer} t<br>
+    Timepris: ${timepris} kr<br>
+    Arbeid: ${arbeid} kr<br>
+    Ekstra: ${ekstra} kr<br><br>
+    <strong>Total: ${total} kr</strong>
+  `;
 }
 
 function lagPDF() {
-  alert("PDF-funksjon kommer i neste steg 👍");
+  alert("PDF-generering legges til i neste steg 👍");
 }
 </script>
 
