--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Min Pris</title>
 
-<link rel="icon" href="icons/192.png">
-<link rel="apple-touch-icon" href="icons/192.png">
+<!-- IKON -->
+<link rel="icon" href="icon.jpeg" type="image/jpeg">
+<link rel="apple-touch-icon" href="icon.jpeg">
 
+<!-- PDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
@@ -66,10 +68,10 @@ button {
 
 <div class="card">
 
-<textarea id="beskrivelse" placeholder="Eks:
-4t riving, 3t rengjøring
-Bad: 6t riving
-Avfall: 4000kr"></textarea>
+<textarea id="beskrivelse" placeholder="Eksempel:
+Bad: 4t riving, 3t rengjøring
+Soverom: 8t riving, 7t rengjøring
+Avfall: 1000kr"></textarea>
 
 <input id="timepris" type="number" placeholder="Timepris (kr)">
 
