--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-01:49
-Du har sendt
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -10,7 +8,6 @@ Du har sendt
   <link rel="apple-touch-icon" href="icons/192.jpeg">
   <link rel="icon" type="image/jpeg" href="icons/192.jpeg">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#ffffff">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -21,7 +18,6 @@ Du har sendt
       padding: 20px;
       text-align: center;
     }
-
     .card {
       background: white;
       padding: 20px;
@@ -30,7 +26,6 @@ Du har sendt
       margin: auto;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-
     input, textarea {
       width: 100%;
       padding: 12px;
@@ -39,11 +34,7 @@ Du har sendt
       border: 1px solid #ccc;
       font-size: 16px;
     }
-
-    textarea {
-      min-height: 120px;
-    }
-
+    textarea { min-height: 120px; }
     button {
       width: 100%;
       padding: 12px;
@@ -54,11 +45,9 @@ Du har sendt
       background: #007bff;
       color: white;
     }
-
     .result {
       margin-top: 15px;
       text-align: left;
-      font-size: 15px;
     }
   </style>
 </head>
@@ -69,18 +58,19 @@ Du har sendt
 
 <div class="card">
 
-  <textarea id="beskrivelse" placeholder="Eks:
+<textarea id="beskrivelse" placeholder="Eks:
 Bad: 4t riving, 3t rengjøring
-Soverom: 8t riving, 7t rengjøring
-Avfall: 1000kr"></textarea>
+Soverom: 8t riving, 7t rengjøring"></textarea>
 
-  <input id="timepris" type="number" placeholder="Timepris (kr)">
-  <input id="kmPerDag" type="number" placeholder="Km per dag">
+<input id="timepris" type="number" placeholder="Timepris (kr)">
+<input id="kmPerDag" type="number" placeholder="Km per dag">
+<input id="avfall" type="number" placeholder="Avfall totalt (kr)">
+<input id="forbrukPerDag" type="number" placeholder="Forbruk per dag (kr)">
 
-  <button onclick="beregn()">Beregn</button>
-  <button onclick="lagPDF()">Last ned PDF</button>
+<button onclick="beregn()">Beregn</button>
+<button onclick="lagPDF()">Last ned PDF</button>
 
-  <div class="result" id="resultat"></div>
+<div class="result" id="resultat"></div>
 </div>
 
 <script>
@@ -88,6 +78,8 @@ function beregn() {
   const tekst = document.getElementById("beskrivelse").value.toLowerCase();
   const timepris = Number(document.getElementById("timepris").value);
   const kmPerDag = Number(document.getElementById("kmPerDag").value || 0);
+  const avfall = Number(document.getElementById("avfall").value || 0);
+  const forbrukPerDag = Number(document.getElementById("forbrukPerDag").value || 0);
 
   if (!tekst || !timepris) {
     alert("Fyll inn arbeidsbeskrivelse og timepris");
@@ -96,7 +88,6 @@ function beregn() {
 
   let riving = 0;
   let rengjoring = 0;
-  let avfall = 0;
 
   const matcher = tekst.matchAll(/(\d+)\s*t\s*(riving|rengjøring)/gi);
   for (const m of matcher) {
@@ -104,15 +95,14 @@ function beregn() {
     if (m[2] === "rengjøring") rengjoring += parseInt(m[1]);
   }
 
-  const avfallMatch = tekst.match(/avfall[^0-9]*(\d+)/i);
-  if (avfallMatch) avfall = parseInt(avfallMatch[1]);
-
   const totaleTimer = riving + rengjoring;
   const dager = Math.ceil(totaleTimer / 7.5);
-  const kmPris = dager * kmPerDag * 15;
 
+  const kmPris = dager * kmPerDag * 15;
+  const forbrukTotal = dager * forbrukPerDag;
   const arbeid = totaleTimer * timepris;
-  const subtotal = arbeid + avfall + kmPris;
+
+  const subtotal = arbeid + avfall + kmPris + forbrukTotal;
   const mva = Math.round(subtotal * 0.25);
   const total = subtotal + mva;
 
@@ -120,12 +110,12 @@ function beregn() {
     <strong>Spesifikasjon</strong><br>
     Riving: ${riving} t<br>
     Rengjøring: ${rengjoring} t<br>
-    Arbeidstid: ${dager} dager<br>
-    Timepris: ${timepris} kr<br><br>
+    Arbeidstid: ${dager} dager<br><br>
 
     Arbeid: ${arbeid} kr<br>
-    Avfall: ${avfall} kr<br>
-    km/per/dag (15kr): ${kmPris} kr<br><br>
+    Avfall totalt: ${avfall} kr<br>
+    km/per/dag (15kr): ${kmPris} kr<br>
+    Forbruk/dag: ${forbrukTotal} kr<br><br>
 
     <strong>Sum eks. mva:</strong> ${subtotal} kr<br>
     MVA (25%): ${mva} kr<br><br>
