--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Min Pris</title>
 
+  <!-- 🔒 Cache-sikring -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+
   <link rel="apple-touch-icon" href="icons/192.jpeg">
   <link rel="icon" type="image/jpeg" href="icons/192.jpeg">
   <link rel="manifest" href="manifest.json">
@@ -18,6 +23,7 @@
       padding: 20px;
       text-align: center;
     }
+
     .card {
       background: white;
       padding: 20px;
@@ -26,6 +32,7 @@
       margin: auto;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
+
     input, textarea {
       width: 100%;
       padding: 12px;
@@ -34,7 +41,11 @@
       border: 1px solid #ccc;
       font-size: 16px;
     }
-    textarea { min-height: 120px; }
+
+    textarea {
+      min-height: 120px;
+    }
+
     button {
       width: 100%;
       padding: 12px;
@@ -45,6 +56,7 @@
       background: #007bff;
       color: white;
     }
+
     .result {
       margin-top: 15px;
       text-align: left;
@@ -114,7 +126,7 @@ function beregn() {
 
     Arbeid: ${arbeid} kr<br>
     Avfall totalt: ${avfall} kr<br>
-    km/per/dag (15kr): ${kmPris} kr<br>
+    Kilometer pris totalt: ${kmPris} kr<br>
     Forbruk/dag: ${forbrukTotal} kr<br><br>
 
     <strong>Sum eks. mva:</strong> ${subtotal} kr<br>
