--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,8 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
 
-  <link rel="icon" type="image/jpeg" href="icons/192.jpeg">
+  <link rel="icon" href="icons/192.jpeg">
   <link rel="apple-touch-icon" href="icons/192.jpeg">
-  <link rel="manifest" href="manifest.json">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -49,6 +48,7 @@
       font-size: 16px;
       background: #007bff;
       color: white;
+      cursor: pointer;
     }
     .result {
       margin-top: 15px;
@@ -59,7 +59,7 @@
 
 <body>
 
-<h1>🏠 Min Pris</h1>
+<h1>🏠 MinPris</h1>
 
 <div class="card">
 
@@ -72,8 +72,8 @@ Soverom: 8t riving, 7t rengjøring"></textarea>
 <input id="avfall" type="number" placeholder="Avfall totalt (kr)">
 <input id="forbrukPerDag" type="number" placeholder="Forbruk per dag (kr)">
 
-<button onclick="beregn()">Beregn</button>
-<button onclick="lagPDF()">Last ned PDF</button>
+<button type="button" onclick="beregn()">Beregn</button>
+<button type="button" onclick="lagPDF()">Last ned PDF</button>
 
 <div class="result" id="resultat"></div>
 </div>
@@ -103,9 +103,9 @@ function beregn() {
   const totaleTimer = riving + rengjoring;
   const dager = Math.ceil(totaleTimer / 7.5);
 
+  const arbeid = totaleTimer * timepris;
   const kmPris = dager * kmPerDag * 15;
   const forbrukTotal = dager * forbrukPerDag;
-  const arbeid = totaleTimer * timepris;
 
   const subtotal = arbeid + avfall + kmPris + forbrukTotal;
   const mva = Math.round(subtotal * 0.25);
@@ -132,9 +132,6 @@ function beregn() {
 function lagPDF() {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
-
-  const beskrivelse = document.getElementById("beskrivelse").value;
-  const resultat = document.getElementById("resultat").innerText;
   const dato = new Date().toLocaleDateString("no-NO");
 
   let y = 20;
@@ -150,32 +147,15 @@ function lagPDF() {
   doc.line(14, y, 196, y);
   y += 10;
 
-  doc.setFontSize(13);
-  doc.text("Arbeidsbeskrivelse", 14, y);
-  y += 6;
-
   doc.setFontSize(11);
-  doc.text(doc.splitTextToSize(beskrivelse, 180), 14, y);
-  y += 20;
-
-  doc.setFontSize(13);
-  doc.text("Kostnadsoversikt", 14, y);
-  y += 6;
-
-  doc.setFontSize(11);
-  const rows = resultat.split("\n");
-
-  rows.forEach(row => {
-    if (!row.trim()) return;
-    const parts = row.split(":");
+  const lines = document.getElementById("resultat").innerText.split("\n");
+  lines.forEach(l => {
+    if (!l.trim()) return;
+    const parts = l.split(":");
     doc.text(parts[0], 14, y);
     doc.text(parts.slice(1).join(":"), 180, y, { align: "right" });
     y += 6;
   });
-
-  doc.setFontSize(9);
-  doc.setTextColor(120);
-  doc.text("Generert med Min Pris", 105, 290, { align: "center" });
 
   doc.save("tilbud.pdf");
 }
