--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Min Pris</title>
-
-  <link rel="icon" href="icons/192.jpeg">
-  <link rel="apple-touch-icon" href="icons/192.jpeg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MinPris</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -45,10 +42,6 @@
       color: white;
       cursor: pointer;
     }
-    .result {
-      margin-top: 15px;
-      text-align: left;
-    }
   </style>
 </head>
 
@@ -57,89 +50,83 @@
 <h1>🏠 MinPris</h1>
 
 <div class="card">
+  <textarea id="beskrivelse" placeholder="Eks: Bad – 4t riving, 3t rengjøring"></textarea>
 
-<textarea id="beskrivelse" placeholder="Eks:
-Bad: 4t riving, 3t rengjøring"></textarea>
+  <input id="timepris" type="number" placeholder="Timepris (kr)">
+  <input id="km" type="number" placeholder="Km per dag">
+  <input id="avfall" type="number" placeholder="Avfall (kr)">
+  <input id="forbruk" type="number" placeholder="Forbruk per dag (kr)">
 
-<input id="timepris" type="number" placeholder="Timepris (kr)">
-<input id="kmPerDag" type="number" placeholder="Km per dag">
-<input id="avfall" type="number" placeholder="Avfall totalt (kr)">
-<input id="forbrukPerDag" type="number" placeholder="Forbruk per dag (kr)">
+  <button onclick="beregn()">Beregn</button>
+  <button onclick="lagPDF()">Last ned PDF</button>
 
-<!-- 👇 VIKTIG -->
-<button type="button" onclick="beregn()">Beregn</button>
-<button type="button" onclick="lagPDF()">Last ned PDF</button>
-
-<div class="result" id="resultat"></div>
+  <div id="resultat"></div>
 </div>
 
 <script>
-function beregn() {
-  const tekst = document.getElementById("beskrivelse").value.toLowerCase();
-  const timepris = Number(document.getElementById("timepris").value);
-  const kmPerDag = Number(document.getElementById("kmPerDag").value || 0);
-  const avfall = Number(document.getElementById("avfall").value || 0);
-  const forbrukPerDag = Number(document.getElementById("forbrukPerDag").value || 0);
+let kalkyle = {};
 
-  if (!tekst || !timepris) {
-    alert("Fyll inn arbeidsbeskrivelse og timepris");
+async function beregn() {
+  const beskrivelse = document.getElementById("beskrivelse").value;
+  const timepris = Number(document.getElementById("timepris").value);
+  const km = Number(document.getElementById("km").value || 0);
+  const avfall = Number(document.getElementById("avfall").value || 0);
+  const forbruk = Number(document.getElementById("forbruk").value || 0);
+
+  if (!beskrivelse || !timepris) {
+    alert("Fyll inn beskrivelse og timepris");
     return;
   }
 
-  let riving = 0;
-  let rengjoring = 0;
+  const ai = await fetch("/api/analyser", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ beskrivelse })
+  }).then(r => r.json());
 
-  const matcher = tekst.matchAll(/(\d+)\s*t\s*(riving|rengjøring)/gi);
-  for (const m of matcher) {
-    if (m[2] === "riving") riving += parseInt(m[1]);
-    if (m[2] === "rengjøring") rengjoring += parseInt(m[1]);
-  }
-
-  const timer = riving + rengjoring;
+  const timer = ai.timer;
   const dager = Math.ceil(timer / 7.5);
 
   const arbeid = timer * timepris;
-  const kmPris = dager * kmPerDag * 15;
-  const forbruk = dager * forbrukPerDag;
+  const kmPris = km * 15 * dager;
+  const forbrukTotalt = forbruk * dager;
 
-  const subtotal = arbeid + avfall + kmPris + forbruk;
+  const subtotal = arbeid + kmPris + avfall + forbrukTotalt;
   const mva = Math.round(subtotal * 0.25);
   const total = subtotal + mva;
 
+  kalkyle = {
+    arbeidstype: ai.arbeidstype,
+    timer,
+    total
+  };
+
   document.getElementById("resultat").innerHTML = `
-    <strong>Oppsett:</strong><br>
-    Riving: ${riving} t<br>
-    Rengjøring: ${rengjoring} t<br>
-    Arbeidstid: ${dager} dager<br><br>
-
-    Arbeid: ${arbeid} kr<br>
-    Avfall totalt: ${avfall} kr<br>
-    Kilometer pris totalt: ${kmPris} kr<br>
-    Forbruk/dag: ${forbruk} kr<br><br>
-
-    <strong>Sum eks. mva:</strong> ${subtotal} kr<br>
-    MVA (25%): ${mva} kr<br><br>
-
-    <strong>Total inkl. mva: ${total} kr</strong>
+    <b>Timer:</b> ${timer}<br>
+    <b>Dager:</b> ${dager}<br>
+    <b>Total:</b> ${total} kr
   `;
 }
 
-function lagPDF() {
+async function lagPDF() {
+  const res = await fetch("/api/pdftekst", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(kalkyle)
+  });
+
+  const data = await res.json();
+
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
 
-  const lines = document.getElementById("resultat").innerText.split("\n");
-
-  let y = 20;
   doc.setFontSize(18);
-  doc.text("TILBUD", 105, y, { align: "center" });
-  y += 12;
+  doc.text("TILBUD", 105, 20, { align: "center" });
 
-  lines.forEach(l => {
-    if (!l.trim()) return;
-    doc.text(l, 14, y);
-    y += 6;
-  });
+  doc.setFontSize(11);
+  doc.text(data.tekst, 14, 40, { maxWidth: 180 });
+
+  doc.text(\nTotalpris inkl. mva: ${kalkyle.total} kr, 14, 140);
 
   doc.save("tilbud.pdf");
 }
