--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="no">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MinPris</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -14,6 +14,7 @@
       padding: 20px;
       text-align: center;
     }
+
     .card {
       background: white;
       padding: 20px;
@@ -22,7 +23,8 @@
       margin: auto;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    input, textarea {
+
+    textarea, input {
       width: 100%;
       padding: 12px;
       margin: 8px 0;
@@ -30,16 +32,16 @@
       border: 1px solid #ccc;
       font-size: 16px;
     }
-    textarea { min-height: 120px; }
+
     button {
       width: 100%;
       padding: 12px;
       margin-top: 10px;
-      border: none;
       border-radius: 8px;
-      font-size: 16px;
+      border: none;
       background: #007bff;
       color: white;
+      font-size: 16px;
       cursor: pointer;
     }
   </style>
@@ -47,86 +49,54 @@
 
 <body>
 
-<h1>🏠 MinPris</h1>
+<h2>🏠 MinPris</h2>
 
 <div class="card">
-  <textarea id="beskrivelse" placeholder="Eks: Bad – 4t riving, 3t rengjøring"></textarea>
+  <textarea id="tekst" placeholder="Eks: Bad – 4t riving, 3t rengjøring"></textarea>
 
   <input id="timepris" type="number" placeholder="Timepris (kr)">
   <input id="km" type="number" placeholder="Km per dag">
   <input id="avfall" type="number" placeholder="Avfall (kr)">
   <input id="forbruk" type="number" placeholder="Forbruk per dag (kr)">
 
-  <button onclick="beregn()">Beregn</button>
-  <button onclick="lagPDF()">Last ned PDF</button>
+  <button type="button" onclick="beregn()">Beregn</button>
+  <button type="button" onclick="lagPDF()">Last ned PDF</button>
 
   <div id="resultat"></div>
 </div>
 
 <script>
-let kalkyle = {};
+let resultatData = {};
 
 async function beregn() {
-  const beskrivelse = document.getElementById("beskrivelse").value;
-  const timepris = Number(document.getElementById("timepris").value);
-  const km = Number(document.getElementById("km").value || 0);
-  const avfall = Number(document.getElementById("avfall").value || 0);
-  const forbruk = Number(document.getElementById("forbruk").value || 0);
-
-  if (!beskrivelse || !timepris) {
-    alert("Fyll inn beskrivelse og timepris");
-    return;
-  }
-
-  const ai = await fetch("/api/analyser", {
+  const res = await fetch("/api/ai", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ beskrivelse })
-  }).then(r => r.json());
-
-  const timer = ai.timer;
-  const dager = Math.ceil(timer / 7.5);
-
-  const arbeid = timer * timepris;
-  const kmPris = km * 15 * dager;
-  const forbrukTotalt = forbruk * dager;
-
-  const subtotal = arbeid + kmPris + avfall + forbrukTotalt;
-  const mva = Math.round(subtotal * 0.25);
-  const total = subtotal + mva;
-
-  kalkyle = {
-    arbeidstype: ai.arbeidstype,
-    timer,
-    total
-  };
-
-  document.getElementById("resultat").innerHTML = `
-    <b>Timer:</b> ${timer}<br>
-    <b>Dager:</b> ${dager}<br>
-    <b>Total:</b> ${total} kr
-  `;
-}
-
-async function lagPDF() {
-  const res = await fetch("/api/pdftekst", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(kalkyle)
+    body: JSON.stringify({
+      tekst: tekst.value,
+      timepris: Number(timepris.value),
+      km: Number(km.value),
+      avfall: Number(avfall.value),
+      forbruk: Number(forbruk.value)
+    })
   });
 
   const data = await res.json();
+  resultatData = data;
 
+  document.getElementById("resultat").innerHTML = `
+    <b>Timer:</b> ${data.timer}<br>
+    <b>Totalpris:</b> ${data.total} kr
+  `;
+}
+
+function lagPDF() {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
 
-  doc.setFontSize(18);
   doc.text("TILBUD", 105, 20, { align: "center" });
-
-  doc.setFontSize(11);
-  doc.text(data.tekst, 14, 40, { maxWidth: 180 });
-
-  doc.text(\nTotalpris inkl. mva: ${kalkyle.total} kr, 14, 140);
+  doc.text(resultatData.tekst, 14, 40);
+  doc.text("Totalpris: " + resultatData.total + " kr", 14, 80);
 
   doc.save("tilbud.pdf");
 }
